resources/testcases_static_checks/tests/positive/isRmfa2/DmfcAndRmfa.rls
P(?X, !Z), P(!Z, ?X) :- P(?Y, ?X) .
