resources/testcases_static_checks/tests/negative/isRpc/reorderPizza.rls
NextOrder(?X, !Z), Pizza(!Z) | LastForToday(?X) :- Pizza(?X) .
LastForToday(?Y) :- NextOrder(?X, ?Y) .
